pages no adaptive

--- a/about.html
+++ b/about.html
@@ -141,82 +141,211 @@
     </div>
 </header>
 
-<div class="wrapper_fullHD contacts_page">
-    <div class="contacts__wrapper_half">
-        <div class="wrapper_half">
-            <h3 class="white">ЗАКАЖИТЕ РАСЧЕТ ДЛЯ ПРОДВИЖЕНИЯ БИЗНЕСА</h3>
-            <form method="post"
-                  action="#"
-                  enctype="multipart/form-data"
-                  class="modal-form"
-                  data-form-ids="popup">
-
-                <div class="modal__input-wrapper">
-                    <input type="text" name="modal_name" placeholder="Введите ваше имя" class="form-input" required="">
-                    <input type="text" name="modal_phone" placeholder="Введите ваш телефон"
-                           class="form-input form-input--tel" required="">
-                    <input type="text" name="modal_email" placeholder="Введите ваш E-mail"
-                           class="form-input" required="">
-                    <textarea name="modal_message" class="form-input form-textarea" id="" cols="30" rows="2"
-                              placeholder="Ваш проект"></textarea>
-                </div>
-
-                <div class="modal-form__row">
-                    <button type="button" class="btn btn_small btn_small_white" name="add_file" value="">
-                        ПРИКРЕПИТЬ ФАЙЛ
-                    </button>
-                    <div class="form__added-file">
-                        <span class="form__file-name">filename.doc</span>
-                        <button type="button" class="btn btn__delete-file" name="send" value="">
-                            <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
-                                 xmlns="http://www.w3.org/2000/svg">
-                                <path d="M9.66683 1.27325L8.72683 0.333252L5.00016 4.05992L1.2735 0.333252L0.333496 1.27325L4.06016 4.99992L0.333496 8.72659L1.2735 9.66659L5.00016 5.93992L8.72683 9.66659L9.66683 8.72659L5.94016 4.99992L9.66683 1.27325Z"
-                                      fill="#E0E0E0"/>
-                            </svg>
-                        </button>
+<div class="s_hero">
+    <div class="wrapper_fullHD">
+        <div class="hero hero_about">
+            <div class="wrapper">
+                <div class="hero__first-row">
+                    <div class="hero__first-row__left">
+                        <h1 class="white">АГЕНТСТВО КОМПЛЕКСНОГО PERFOMANCE-МАРКЕТИНГА</h1>
+                        <nav class="breadcrumbs">
+                            <ul class="breadcrumbs__list">
+                                <li><a href="index.html">Главная</a></li>
+                                <li><span>Наши услуги</span></li>
+                            </ul>
+                        </nav>
+                    </div>
+                    <div class="hero__first-row__right">
+                        <a href="#" download class="download-link">
+                            СКАЧАТЬ ПРЕЗЕНТАЦИЮ АГЕНТСТВА <span>PDF, 2 MB</span></a>
                     </div>
                 </div>
-
-                <div class="modal-form__row">
-                    <input type="checkbox" class="notice_checked" checked="" name="notice" id="notice">
-                    <label class="notice_checked__label" for="notice">
-                        Отправляя заявку, я соглашаюсь на обработку персональных данных
-                    </label>
+                <div class="hero__second-row">
+                    <div class="hero__second-row__left">
+                        <img src="./images/about1.jpg"
+                             class="about__img"
+                             alt="агентство комплексного perfomance-маркетинга"/>
+                        <span class="list__title">Мы работали более чем с 250 проектами разной тематики из разных категорий:</span>
+                        <ul class="about-project__list">
+                            <li>IT и digital продукты</li>
+                            <li>Строительные компании</li>
+                            <li>Розничные магазины</li>
+                            <li>Крупные поставщики продукции</li>
+                            <li>Retail</li>
+                            <li>IT и digital продукты</li>
+                            <li>Строительные компании</li>
+                            <li>Розничные магазины</li>
+                            <li>Крупные поставщики продукции</li>
+                            <li>Retail</li>
+                        </ul>
+                    </div>
+                    <div class="hero__second-row__right">
+                        <p class="white about__text_1">Вот вам яркий пример современных тенденций - реализация
+                            намеченных плановых заданий однозначно фиксирует необходимость системы массового участия.
+                            Противоположная точка зрения подразумевает, что действия представителей оппозиции формируют
+                            глобальную экономическую сеть и при этом - призваны к ответу.
+                            Учитывая ключевые сценарии поведения, социально-экономическое развитие создаёт предпосылки
+                            для поэтапного и последовательного развития общества. </p>
+                        <quotes>
+                            <p>Вот вам яркий пример современных тенденций - реализация намеченных плановых заданий
+                                однозначно фиксирует необходимость системы массового участия.</p>
+                            <div class="quotes__bottom">
+                                <img src="./images/icon_pogodin.png" alt="">
+                                <span class="quotes__name">Леонид Погодин</span>
+                                <span class="quotes__job">генеральный директор, основатель</span>
+                            </div>
+                        </quotes>
+                        <p class="about__text_2">Вот вам яркий пример современных тенденций - реализация намеченных
+                            плановых заданий однозначно фиксирует необходимость системы массового участия.
+                            Противоположная точка зрения подразумевает, что действия представителей оппозиции.</p>
+                        <a href="#callback_modal" class="btn btn_gradient" data-fancybox-modal>ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</a>
+                    </div>
                 </div>
-
-                <div class="modal-form__row">
-                    <button type="submit" class="btn_submit btn btn_submit_white" name="send" value="">
-                        ОСТАВИТЬ ЗАЯВКУ НА ИДИВИДУАЛЬНЫЙ РАСЧЕТ
-                    </button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
-    <div class="contacts__wrapper_half">
-        <div class="wrapper_half">
-            <h3>СВЯЗАТЬСЯ С НАМИ:</h3>
-            <ul class="contacts__list">
-                <li class="contacts__item">
-                    <a href="tel:+78126655112" class="contacts__phone">
-                        +7 812 665 51 12
-                    </a>
+</div>
+
+<ul class="benefits__list benefits__list_complex">
+    <li class="benefits__item benefits__item_complex">
+        Опыт работы с 2012<br>года: работали во всех<br>нишах
+    </li>
+    <li class="benefits__item benefits__item_complex">
+        Авторский подход к<br>работе с РСЯ и<br>сегментами аудитории
+    </li>
+    <li class="benefits__item benefits__item_complex">
+        Сертифицированные<br>специалисты Яндекс и<br>Google
+    </li>
+</ul>
+
+<div class="s_services">
+    <div class="wrapper">
+        <div class="bg-text bg-text_services"></div>
+        <div class="services services_main">
+            <h2 class="title">УМЕЕМ <span class="green">РЕШАТЬ</span> ЛЮБЫЕ ЗАДАЧИ</h2>
+            <ul class="services__list">
+                <li class="services__item">
+                    <div class="services__image-block"></div>
+                    <div class="services__info">
+                        <div class="services__info__first-row">
+                            <h3 class="services__item__title">КОНТЕКСТНАЯ<br>РЕКЛАМА</h3>
+                            <a href="#" class="btn btn_round">
+                                <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                          fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="services__info__button-wrapper">
+                            <div class="services__info__button-wrapper">
+                                <a href="#" class="btn btn_services">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                    </div>
                 </li>
-                <li class="contacts__item contacts__item_email">
-                    <span class="contacts__item__title">Для предложений о сотрудничестве:</span>
-                    <a href="mailto:info@perfomance-group.ru" class="email">info@perfomance-group.ru</a>
+
+                <li class="services__item">
+                    <div class="services__image-block"></div>
+                    <div class="services__info">
+                        <div class="services__info__first-row">
+                            <h3 class="services__item__title">КОНТЕКСТНАЯ<br>РЕКЛАМА</h3>
+                            <a href="#" class="btn btn_round">
+                                <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                          fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="services__info__button-wrapper">
+                            <div class="services__info__button-wrapper">
+                                <a href="#" class="btn btn_services">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                    </div>
                 </li>
-                <li class="contacts__item contacts__item_email">
-                    <span class="contacts__item__title">Отдел продаж:</span>
-                    <a href="mailto:sales@perfomance-group.ru" class="email">sales@perfomance-group.ru</a>
+
+                <li class="services__item">
+                    <div class="services__image-block"></div>
+                    <div class="services__info">
+                        <div class="services__info__first-row">
+                            <h3 class="services__item__title">КОНТЕКСТНАЯ<br>РЕКЛАМА</h3>
+                            <a href="#" class="btn btn_round">
+                                <svg width="14" height="10" viewBox="0 0 14 10" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.25 4.25H10.8775L8.1925 1.5575L9.25 0.5L13.75 5L9.25 9.5L8.1925 8.4425L10.8775 5.75H0.25V4.25Z"
+                                          fill="#ffffff"/>
+                                </svg>
+                            </a>
+                        </div>
+                        <div class="services__info__button-wrapper">
+                            <div class="services__info__button-wrapper">
+                                <a href="#" class="btn btn_services">ПОДРОБНЕЕ</a>
+                            </div>
+                        </div>
+                    </div>
                 </li>
-                <li class="contacts__item contacts__item_address">Санкт-Петербург, ул. Заозерная, 8А, офис 301</li>
+
             </ul>
         </div>
     </div>
-    <div id="map">
-        <img src="./images/map2.jpg" alt="">
-    </div>
+</div>
 
+<div class="s_callback">
+    <div class="wrapper_fullHD">
+        <div class="callback">
+            <div class="wrapper">
+                <h3 class="white">У ВАС ЕСТЬ ПОХОЖАЯ ЗАДАЧА? ОСТАВЬТЕ ЗАЯВКУ И МЫ ПРЕДЛОЖИМ ВАРИАНТЫ ЕЕ РЕШЕНИЯ:</h3>
+                <form method="post"
+                      action="#"
+                      enctype="multipart/form-data"
+                      class="callback__form"
+                      data-form-ids="popup">
+
+                    <div class="callback__input-wrapper">
+                        <input type="text" name="modal_name" placeholder="Введите ваше имя" class="form-input"
+                               required="">
+                        <input type="text" name="modal_phone" placeholder="Введите ваш телефон"
+                               class="form-input form-input--tel" required="">
+                        <input type="text" name="modal_email" placeholder="Ваш проект"
+                               class="form-input" required="">
+                    </div>
+
+                    <div class="callback__input-wrapper">
+                        <textarea name="modal_message" class="form-input form-textarea" id="" cols="30" rows="4"
+                                  placeholder="Комментарий (не обязательно)"></textarea>
+
+                        <div class="modal-form__row callback__add-file">
+                            <button type="button" class="btn btn_small btn_small_white" name="add_file" value="">
+                                ПРИКРЕПИТЬ ФАЙЛ
+                            </button>
+                            <div class="form__added-file">
+                                <span class="form__file-name">filename.doc</span>
+                                <button type="button" class="btn btn__delete-file" name="send" value="">
+                                    <svg width="10" height="10" viewBox="0 0 10 10" fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M9.66683 1.27325L8.72683 0.333252L5.00016 4.05992L1.2735 0.333252L0.333496 1.27325L4.06016 4.99992L0.333496 8.72659L1.2735 9.66659L5.00016 5.93992L8.72683 9.66659L9.66683 8.72659L5.94016 4.99992L9.66683 1.27325Z"
+                                              fill="#E0E0E0"/>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="callback__input-wrapper callback__submit-wrapper">
+                        <button type="submit" class="btn_submit btn btn_gradient" name="send" value="">
+                            ОСТАВИТЬ ЗАЯВКУ НА ИДИВИДУАЛЬНЫЙ РАСЧЕТ
+                        </button>
+
+                        <input type="checkbox" class="notice_checked" checked="" name="notice" id="notice">
+                        <label class="notice_checked__label callback__notice" for="notice"> Я согласен с условиями
+                            обработки данных</label>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 <footer>
@@ -362,6 +491,11 @@
         </div>
 
         <div class="modal-form__row">
+            <input type="text" name="modal_phone" placeholder="Тема"
+                   class="form-input form-input--tel" required="">
+        </div>
+
+        <div class="modal-form__row">
             <label>
                 <input type="checkbox" class="notice_cheked" checked="" name="notice">
                 Отправляя заявку, я соглашаюсь на обработку персональных данных
@@ -369,7 +503,7 @@
         </div>
 
         <div class="modal-form__row">
-            <input type="submit" class="form-submit btn" value="Заказать звонок">
+            <button type="submit" class="form-submit btn">Заказать звонок</button>
         </div>
     </form>
 </div>
