--- a/index.html
+++ b/index.html
@@ -647,8 +647,8 @@
                     </div>
 
                     <div class="modal-form__row">
-                        <label class="notice_checked__label">
-                            <input type="checkbox" class="notice_checked" checked="" name="notice">
+                        <input type="checkbox" class="notice_checked" checked="" name="notice" id="notice">
+                        <label class="notice_checked__label" for="notice">
                             Отправляя заявку, я соглашаюсь на обработку персональных данных
                         </label>
                     </div>
