--- a/services.html
+++ b/services.html
@@ -586,8 +586,8 @@
                             ОСТАВИТЬ ЗАЯВКУ НА ИДИВИДУАЛЬНЫЙ РАСЧЕТ
                         </button>
 
-                        <label class="notice_checked__label callback__notice">
-                            <input type="checkbox" class="notice_checked" checked="" name="notice">
+                        <input type="checkbox" class="notice_checked" checked="" name="notice" id="notice">
+                        <label class="notice_checked__label callback__notice" for="notice">
                             Я согласен с условиями обработки данных
                         </label>
                     </div>
